--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </header>
 
     <main>
-        <div class="container-top" style="text-align: center;">
+        <div class="container" style="text-align: center;">
 
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4 bg-light">
                     <strong style="font-size: 30px;">Colonna 1</strong>
                     <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi</p>
                 </div>
     
-                <div class="col-sm-12 col-md-6 col-lg-6 bg-secondary">
+                <div class="col-sm-12 col-md-6 col-lg-8 bg-secondary">
                     <strong style="font-size: 30px; color: white;">Colonna 2</strong>
                     <p style="color: white;">Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi</p>
                 </div>
@@ -33,11 +33,11 @@
             </div>
         </div>
 
-        <div class="container-center" style="text-align: center; margin-top: 20px;">
+        <div class="container" style="text-align: center; margin-top: 20px;">
 
-            <div class="row justify-content-center">
+            <div class="row">
 
-                <div class="col-sm-6 col-md-4 col-lg-4 bg-primary">
+                <div class="col-sm-6 col-md-4 col-lg-6 bg-primary">
                     <strong style="font-size: 30px;color: white;">Colonna 1</strong>
                     <p style="color: white;">Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi</p>
                 </div>
@@ -54,9 +54,9 @@
             </div>
         </div>
 
-        <div class="container-bottom" style="text-align: center; margin-top: 20px;">
+        <div class="container" style="text-align: center; margin-top: 20px;">
 
-            <div class="row justify-content-center">
+            <div class="row">
 
                 <div class="col-sm-6 col-md-3 col-lg-3 bg-info">
                     <strong style="font-size: 30px;color: white;">Colonna 1</strong>
@@ -68,12 +68,12 @@
                     <p style="color: white;">Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e piu' grandi</p>
                 </div>
     
-                <div class="col-sm-6 col-md-3 col-lg-2 bg-dark">
+                <div class="col-sm-6 col-md-3 col-lg-3 bg-dark">
                     <strong style="font-size: 30px;color: white;">Colonna 3</strong>
                     <p style="color: white;">Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e piu' grandi</p>
                 </div>
 
-                <div class="col-sm-6 col-md-3 col-lg-2 bg-light">
+                <div class="col-sm-6 col-md-3 col-lg-3 bg-light">
                     <strong style="font-size: 30px;">Colonna 4</strong>
                     <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e piu' grandi</p>
                 </div>
